--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:layout_width="151dp"
                 android:layout_height="113dp"
                 android:layout_marginBottom="40dp"
-                app:srcCompat="@drawable/developeru" />
+                app:srcCompat="@drawable/icon_user" />
 
             <EditText
                 android:id="@+id/edtUsuario"
