Creado botón para registrar usuario. Modificación estilo y color botones.

--- a/app/src/main/res/layout/activity_documentacion_coche.xml
+++ b/app/src/main/res/layout/activity_documentacion_coche.xml
@@ -97,9 +97,10 @@
         android:layout_marginEnd="43dp"
         android:layout_marginRight="43dp"
         android:layout_marginBottom="144dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="RegisterDocCoche"
         android:text="Registrar \nDocumentacion Coche"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnmenuprincipal"
         app:layout_constraintHorizontal_bias="1.0"
@@ -114,9 +115,10 @@
         android:layout_marginEnd="48dp"
         android:layout_marginRight="48dp"
         android:layout_marginBottom="83dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="OpenMenuPrincipal"
         android:text="Menú \nPrincipal"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etanho"
@@ -126,9 +128,9 @@
         android:id="@+id/button7"
         android:layout_width="411dp"
         android:layout_height="105dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/reg_coche"
-        android:textColor="@android:color/background_dark"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
