--- a/app/src/main/res/layout/activity_documentacion_seguro.xml
+++ b/app/src/main/res/layout/activity_documentacion_seguro.xml
@@ -80,9 +80,10 @@
         android:layout_marginEnd="26dp"
         android:layout_marginRight="26dp"
         android:layout_marginBottom="159dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="RegisterDocSeg"
         android:text="Registrar Seguro"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,9 +97,10 @@
         android:layout_marginEnd="67dp"
         android:layout_marginRight="67dp"
         android:layout_marginBottom="159dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="OpenRegisterDoc"
         android:text="@string/Continuar"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/matriculaet" />
@@ -107,9 +109,9 @@
         android:id="@+id/button8"
         android:layout_width="418dp"
         android:layout_height="118dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/reg_seguro"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
