--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,19 @@
                 android:textColor="#FFF"
                 android:textSize="18sp" />
 
+            <Button
+                android:id="@+id/btnLogin2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="15dp"
+                android:background="#1976d2"
+                android:text="@string/btn_registrar"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:onClick="OpenRegister"/>
+
         </LinearLayout>
     </FrameLayout>
     />
