--- a/app/src/main/res/layout/activity_mis_datos.xml
+++ b/app/src/main/res/layout/activity_mis_datos.xml
@@ -34,9 +34,9 @@
         android:layout_marginTop="140dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnbuscar"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ingresar_dni"
         app:layout_constraintTop_toTopOf="parent" />
@@ -129,9 +129,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="91dp"
         android:layout_marginBottom="183dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnborrar"
-        android:textColor="@android:color/background_dark"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_modificarseg"
         app:layout_constraintTop_toBottomOf="@+id/matricula_m"
@@ -145,9 +145,9 @@
         android:layout_marginLeft="46dp"
         android:layout_marginTop="91dp"
         android:layout_marginBottom="183dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnmodificar"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/matricula_m" />
@@ -162,10 +162,10 @@
         android:layout_marginEnd="46dp"
         android:layout_marginRight="46dp"
         android:layout_marginBottom="183dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="MostrarDatosDoc"
         android:text="@string/Continuar"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.722"
@@ -177,9 +177,9 @@
         android:id="@+id/button9"
         android:layout_width="423dp"
         android:layout_height="113dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/dc_seguro"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
