--- a/app/src/main/res/layout/activity_mis_datos__doc.xml
+++ b/app/src/main/res/layout/activity_mis_datos__doc.xml
@@ -16,9 +16,9 @@
         android:layout_marginTop="144dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnbuscar"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/ing_matricula"
@@ -120,9 +120,9 @@
         android:layout_marginEnd="52dp"
         android:layout_marginRight="52dp"
         android:layout_marginBottom="120dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnmodificar"
-        android:textColor="@android:color/background_dark"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_eliminardoc"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,9 +136,9 @@
         android:layout_marginLeft="44dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="120dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnborrar"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_modificardoc"
         app:layout_constraintTop_toBottomOf="@+id/mostrar_anho" />
@@ -153,15 +153,15 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="120dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
+        android:onClick="OpenPrincipalMenu"
         android:text="@string/Continuar"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toEndOf="@+id/btn_eliminardoc"
-        app:layout_constraintTop_toBottomOf="@+id/mostrar_anho"
-        android:onClick="OpenPrincipalMenu"/>
+        app:layout_constraintTop_toBottomOf="@+id/mostrar_anho" />
 
     <EditText
         android:id="@+id/n_bastidor"
@@ -184,9 +184,9 @@
         android:id="@+id/button11"
         android:layout_width="429dp"
         android:layout_height="121dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/dc_coche"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
