--- a/app/src/main/res/layout/activity_mis_datos_cita.xml
+++ b/app/src/main/res/layout/activity_mis_datos_cita.xml
@@ -32,8 +32,9 @@
         android:layout_marginTop="140dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnbuscar"
+        android:textColor="#FFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ing_dni"
         app:layout_constraintTop_toTopOf="parent" />
@@ -118,8 +119,9 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="56dp"
         android:layout_marginBottom="144dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnmodificar"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mostrar_hora" />
@@ -132,8 +134,9 @@
         android:layout_marginLeft="44dp"
         android:layout_marginTop="91dp"
         android:layout_marginBottom="183dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnborrar"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnmodificar"
         app:layout_constraintTop_toBottomOf="@+id/mostrar_hora"
@@ -149,9 +152,10 @@
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
         android:layout_marginBottom="183dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="VolverMenuPrincipal"
         android:text="Menú \nPrincipal"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -163,9 +167,9 @@
         android:id="@+id/button10"
         android:layout_width="426dp"
         android:layout_height="110dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/dc_citas"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
