--- a/app/src/main/res/layout/activity_mis_datos_usuario.xml
+++ b/app/src/main/res/layout/activity_mis_datos_usuario.xml
@@ -10,9 +10,9 @@
         android:id="@+id/button15"
         android:layout_width="420dp"
         android:layout_height="102dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/titleshow"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,8 +63,9 @@
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
         android:layout_marginBottom="294dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnmodificar"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button17"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,8 +95,9 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="29dp"
         android:layout_marginRight="29dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnbuscar"
+        android:textColor="#FFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/ing_pwd"
@@ -111,8 +113,9 @@
         android:layout_marginEnd="63dp"
         android:layout_marginRight="63dp"
         android:layout_marginBottom="294dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/btnborrar"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button16"
