--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -16,9 +16,10 @@
         android:layout_marginEnd="99dp"
         android:layout_marginRight="99dp"
         android:layout_marginBottom="216dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="registrarusuario"
         android:text="@string/btn_registrar"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintHorizontal_bias="0.0"
@@ -33,9 +34,10 @@
         android:layout_marginEnd="76dp"
         android:layout_marginRight="76dp"
         android:layout_marginBottom="216dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="Volver"
         android:text="@string/btn_volver"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_email" />
@@ -95,9 +97,9 @@
         android:id="@+id/button12"
         android:layout_width="432dp"
         android:layout_height="131dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/txtregistro"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
