--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -80,9 +80,9 @@
         android:id="@+id/button5"
         android:layout_width="415dp"
         android:layout_height="134dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:text="@string/title"
-        android:textColor="@android:color/black"
+        android:textColor="#FFF"
         android:textIsSelectable="false"
         android:textSize="24sp"
         android:textStyle="bold|italic"
@@ -114,7 +114,7 @@
         android:layout_marginTop="45dp"
         android:layout_marginEnd="73dp"
         android:layout_marginRight="73dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="MostrarDatosCita"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btntaller"
@@ -174,9 +174,10 @@
         android:layout_marginEnd="76dp"
         android:layout_marginRight="76dp"
         android:layout_marginBottom="104dp"
-        android:background="@color/colorAccent"
+        android:background="#1976d2"
         android:onClick="CerrarSesion"
         android:text="@string/btncerrarsesion"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
